tests/tuple_enhancements_off/tuple_enhancements_off.exp
Error ----------------------------------------------------------------------------------------------------- test.js:1:18

Labeled tuple elements are not supported. [unsupported-syntax]

   1| export type T = [foo: string]; // ERROR
                       ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:2:18

Tuple spread is not supported. [unsupported-syntax]

   2| export type S = [...T]; // ERROR
                       ^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:3:26

Labeled tuple elements are not supported. [unsupported-syntax]

   3| export type R = [number, foo: string, ...S]; // ERROR
                               ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:3:39

Tuple spread is not supported. [unsupported-syntax]

   3| export type R = [number, foo: string, ...S]; // ERROR
                                            ^^^^



Found 4 errors
